# YurongOS

./: .gitignore  COPYRIGHT  LICENSE  README.md  readme.md
.github/workflows/: build-with-make.yml
archive/: readme.md
archive/src/boot/1st-edition/: boot.asm  kernel_loader.asm
archive/src/boot/2nd-edition/: boot.asm
doc/: readme.md  添加系统调用.md  项目目录结构.md
docs/: 项目目录结构.md
src/: CMakeLists.txt  kernel.link.ld  makefile  makefile.inc  makefile.old
src/boot/: CMakeLists.txt  boot.asm  kernel_loader.asm  makefile
src/boot/ref/: boot.asm
src/boot/ref-ori/: LongModeDirectly.asm  boot.asm
src/concurrent/: CMakeLists.txt  Mutex.cpp  Mutex.h  makefile
src/crt/: CMakeLists.txt  CRT.cpp  CRT.h  makefile
src/device/: CMakeLists.txt  Device.cpp  Device.h  acpi.cpp  acpi.h  pci.cpp  pci.h
src/device/acpi/: acpi.cpp  acpi.h  dsdt.cpp  dsdt.h  facs.cpp  facs.h  fadt.cpp  fadt.h  hpet.cpp  hpet.h  madt.cpp  madt.h  mcfg.cpp  mcfg.h
src/include/: AsciiChar.h  CRT.h  crt.h  stdarg.h  stdbool.h  stdint.h  stdio.h  string.h
src/include/interrupt/: ClockInterrupt.h  ImplementHandlerMacros.h  InterruptDescriptorTable.h  InterruptHandlers.h  KeyboardInterrupt.h
src/include/lib/: LinkedList.h  SystemCallId.h  stdarg.h  stddef.h  stdint.h  stdio.h  syscall.h  syscalls.h  unistd.h
src/include/lib/sys/: types.h
src/include/machine/: GlobalDescriptorTable.h  InterruptDescriptorTable.h  InterruptHandlers.h  Machine.h  PageDirectories.h  X86Assembly.h
src/include/memory/: ArenaMemoryManager.h  FreeMemoryManager.h  KernelMemoryAllocator.h  MemoryManager.h
src/include/sys/: types.h
src/include/yros/: CRT.h  IO.h  Kernel.h  PerCpuCargo.h  io.h  kernel.h
src/include/yros/interrupt/: ClockInterrupt.h  ImplementHandlerMacros.h  InterruptDescriptorTable.h  InterruptHandlers.h  KeyboardInterrupt.h  PageFaultException.h  SystemCall.h
src/include/yros/machine/: Cmos.h  GlobalDescriptorTable.h  InterruptDescriptorTable.h  InterruptHandlers.h  Machine.h  MemoryManager.h  Msr.h  X86Assembly.h
src/include/yros/memory/: ArenaMemoryManager.h  FreeMemoryManager.h  KernelMemoryAllocator.h  MemoryManager.h  PageDirectories.h
src/include/yros/task/: Task.h  TaskManager.h
src/interrupt/: CMakeLists.txt  ClockInterrupt.cpp  ClockInterrupt.h  ImplementHandlerMacros.h  InterruptDescriptorTable.cpp  InterruptDescriptorTable.h  InterruptExit.asm  InterruptExit.h  InterruptHandlers.cpp  InterruptHandlers.h  KeyboardInterrupt.cpp  KeyboardInterrupt.h  PageFaultException.cpp  PageFaultException.h  SystemCall.cpp  SystemCall.h  makefile
src/kernel/: PerCpuCargo.cpp  io.asm  kernel.cpp  kernel_entry.asm  makefile  start.asm
src/lib/: Allocator.h  AsciiChar.h  CMakeLists.txt  LinkedList.cpp  LinkedList.h  config.cpp  config.h  cpuid.h  makefile  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.cpp  stdio.h  string.cpp  string.h  syscall.cpp  syscalls.cpp  syscalls.h  unistd.h
src/lib/collections/: ArrayList.hpp  LinkedList.cpp  LinkedList.h  Map.hpp
src/lib/sys/: types.h
src/machine/: CMakeLists.txt  Cmos.cpp  Cmos.h  GlobalDescriptorTable.cpp  GlobalDescriptorTable.h  InterruptDescriptorTable.cpp  InterruptHandlers.cpp  Machine.cpp  Machine.h  MemoryManager.cpp  Msr.h  RflagsRegister.h  X86Assembly.h  interrupt_bridge.asm  makefile
src/machine/apic/: apic.cpp  apic.h
src/memory/: ArenaMemoryManager.cpp  ArenaMemoryManager.h  CMakeLists.txt  FreeMemoryManager.cpp  FreeMemoryManager.h  KernelMemoryAllocator.cpp  KernelMemoryAllocator.h  MemoryManager.cpp  MemoryManager.h  PageDirectories.h  makefile  memory.cpp  memory.h
src/misc/: AsciiChar.h  CMakeLists.txt  IO.h  Kernel.cpp  Kernel.h  PerCpuCargo.cpp  PerCpuCargo.h  io.asm  io.h  kernel_entry.asm  main.cpp  makefile
src/serial/: CMakeLists.txt  Serial.cpp  Serial.h  makefile
src/task/: CMakeLists.txt  IdleTask.cpp  IdleTask.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  TaskManagerSwitchTo.asm  makefile
src/video/: CMakeLists.txt
src/video/console/: console.cpp  console.h  fonts.cpp  fonts.h
src/video/svga/: svga.cpp  svga.h
src/video/vga/: vga.cpp  vga.h
tools/: bochsrc
tools/scripts/: AddrToPageFrame  AddrToPageFrame.cpp  ElfParser  ElfParser.cpp  ExceptionList.txt  GenerateExceptionCode  GenerateExceptionCode.cpp  SegmentSelectorParser  SegmentSelectorParser.cpp
